# stardust-numpy

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  plan.md  pyproject.toml
.github/workflows/: ci.yml
benches/: numpy_paths.py  paths.rs
src/: broadcast.rs  create.rs  dtype.rs  error.rs  format.rs  join.rs  layout.rs  lib.rs  linalg.rs  select.rs  shape.rs  sort.rs  stride_iter.rs
src/array/: element.rs  mod.rs  view.rs
src/index/: bounds.rs  mod.rs  ops.rs  prepare.rs  spec.rs
src/numpy/: __init__.py  _axis.py  _complex_ops.py  _dtype.py  _elementwise_ops.py  _errors.py  _factory.py  _float_ops.py  _format.py  _indexing.py  _iter.py  _linalg.py  _reductions.py  _shape.py  _shape_manipulation.py  _sorting.py  _types.py  _validation.py  broadcasting.py  creation.py  iteration.py  linalg.py  manipulation.py  ndarray.py  selection.py  sorting.py  ufuncs.py
src/reduce/: axis.rs  kernels.rs  mod.rs  ops.rs  traits.rs
src/ufunc/: kernels.rs  mod.rs  ops.rs  traits.rs
tests/: phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  smoke.rs  test_broadcasting.py  test_complex.py  test_creation.py  test_dtype.py  test_elementwise.py  test_empty.py  test_fancy_indexing.py  test_format.py  test_indexing.py  test_integration.py  test_iteration.py  test_linalg.py  test_manipulation.py  test_nan_inf.py  test_reductions.py  test_selection.py  test_setitem.py  test_shape.py  test_sorting.py  test_ufuncs.py  test_validation.py
