[package]
name = "sdnp"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Educational NumPy-style ndarray library in Rust (Array<T> + promote)"
license = "MIT"
readme = "README.md"

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
criterion = "0.5.1"

[lib]
name = "sdnp"
path = "src/lib.rs"

[[bench]]
name = "paths"
harness = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
incremental = false
debug = false
strip = "symbols"
overflow-checks = false
